--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "expo-linear-gradient": "~12.3.0"
+    "expo-linear-gradient": "~12.3.0",
+    "expo-file-system": "~15.4.4",
+    "expo-image": "~1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
