--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-file-system": "~15.4.4",
-    "expo-image": "~1.3.4"
+    "expo-image": "~1.3.4",
+    "react-native-ionicons": "^4.x"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
